<resources>
    <string name="app_name">IntentAssgnmt</string>
    <string name="main">MainActivity</string>
    <string name="None" />
    <string name="JK1">GoTo JK1</string>
    <string name="JK2">GoTo JK2</string>
    <string name="JK3">GoTo JK3</string>
    <string name="JK4">GoTo JK4</string>
    <string name="JK1A">JK1Activity</string>
    <string name="BackToMain">←MAIN</string>
    <string name="Name">Name</string>
    <string name="CheckedText">CheckedText</string>
    <string name="JK2A">JK2Activity</string>
    <string name="button8">상세정보 보기</string>
    <string name="StringValue">이미지가 없습니다.</string>
    <string name="chbox1">기본Color: Black, 선택시: White</string>
    <string name="rdbtn1">256GB</string>
    <string name="rdbtn2">512GB</string>
    <string name="chbox2">용량</string>
    <string name="tgbtn">버튼7</string>
    <string name="swchbtn">옵션을 정하였고 구매하겠습니다.</string>
    <string name="JK3A">JK3Activity</string>
    <string name="webopen">고양이를 더 보고싶다면 누르세요</string>
    <string name="JK4A">JK4Activity</string>
    <string name="sv">스크롤뷰</string>
    <string name="nsv">네스티드 스크롤뷰</string>
    <string name="defaultText">텍스트없음</string>
    <string name="passwd">비밀번호</string>
    <string name="email">E-Mail</string>
    <string name="pnumber">PhoneNumber</string>
    <string name="학과" />
    <string name="major">학과</string>
    <string name="stdnum">학번</string>
    <string name="birthday">생일(월/일)</string>
    <string name="grade1">1학년</string>
    <string name="grade2">2학년</string>
    <string name="grade3">3학년</string>
    <string name="grade4">4학년</string>
    <string name="galayxy">Galaxy Note 9</string>
    <string name="insur">보험을 적용하시겠습니까?</string>
    <string name="price">가격: 950,000원</string>
    <string name="nickname">j.k.seon</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="tpage">This is Third Fragment</string>
    <string name="fpage">This is First Fragment</string>
    <string name="spage">This is Second Fragment</string>
    <string name="index">Index</string>
    <string name="age">AGE</string>
    <string name="addData">데이터 추가</string>
    <string name="title_activity_jk5">JK5Activity</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="goto5">GOTOJK5</string>
    <string name="jk5activity">JK5Activity</string>
    <string name="frag1">Frag1</string>
    <string name="frag2">Frag2</string>
    <string name="frag3">Frag3</string>
    <string name="frag4">Frag4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
