<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="5dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="306dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/None"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/main"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="0dp"
        android:layout_height="430dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="1"
            app:rowCount="4">

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:contentDescription="@string/StringValue"
                android:src="@drawable/signup"
                android:text="@string/JK1"
                app:layout_column="0"
                app:layout_row="0" />
            <!--app:layout_constraintBottom_toTopOf="@+id/text1"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:text="@string/defaultText"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="0" />
            <!--app:layout_constraintBottom_toTopOf="@+id/button3"-->
            <!--app:layout_constraintStart_toStartOf="@+id/button2"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/button2"-->

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:contentDescription="@string/StringValue"
                android:src="@drawable/addinfo"
                android:text="@string/JK2"
                app:layout_column="0"
                app:layout_row="1" />
            <!--app:layout_constraintBottom_toTopOf="@+id/text2"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/text1"-->

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="57dp"
                android:text="@string/defaultText"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="1" />
            <!--app:layout_constraintBottom_toTopOf="@+id/button4"-->
            <!--app:layout_constraintStart_toStartOf="@+id/button3"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/button3"-->

            <ImageButton
                android:id="@+id/button4"
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:contentDescription="@string/StringValue"
                android:src="@drawable/addinfo"
                android:text="@string/JK3"
                app:layout_column="0"
                app:layout_row="2" />
            <!--app:layout_constraintBottom_toTopOf="@+id/text3"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/text2" />-->

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:text="@string/defaultText"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="2" />
            <!--app:layout_constraintBottom_toTopOf="@+id/button5"-->
            <!--app:layout_constraintStart_toStartOf="@+id/button4"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/button4" />-->

            <ImageButton
                android:id="@+id/button5"
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:contentDescription="@string/StringValue"
                android:src="@drawable/addinfo"
                android:text="@string/JK4"
                app:layout_column="0"
                app:layout_row="3" />
            <!--app:layout_constraintBottom_toTopOf="@+id/text4"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/text3" />-->

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:text="@string/defaultText"
                android:visibility="invisible"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goto5" />
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="@+id/button5"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/button5" />-->

        </android.support.v7.widget.GridLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>